# test_lib

./: .gitignore  configure.ac
lib/src/: Makefile.am  hello.cpp
